# Flick

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  editor  editor.cxx  flick  lets_code  mingw-toolchain.cmake
.github/workflows/: build.yml
src/: SearchReplace.cpp  SearchReplace.hpp  colors.hpp  custom_title_bar.cpp  custom_title_bar.hpp  dock_button.cpp  dock_button.hpp  editor_state.cpp  editor_state.hpp  editor_window.cpp  editor_window.hpp  file_tree.cpp  file_tree.hpp  globals.hpp  main.cpp  scrollbar_theme.cpp  scrollbar_theme.hpp  tab_bar.cpp  tab_bar.hpp  utils.cpp  utils.hpp
